force-app/main/default/objects/Job__c/fields/AAP_Job_Group__c.field-meta.xml
<CustomField>
    <fullName>AAP_Job_Group__c</fullName>
    <label>AAP Job Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executives</fullName>
            </value>
            <value>
                <fullName>Managers</fullName>
            </value>
            <value>
                <fullName>Sales Inside</fullName>
            </value>
            <value>
                <fullName>Sales Outside</fullName>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>