force-app/main/default/objects/Job__c/fields/Account_Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Job_Name__c</fullName>
    <label>Account Job Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>