force-app/main/default/objects/Job__c/fields/Account_Zip__c.field-meta.xml
<CustomField>
    <fullName>Account_Zip__c</fullName>
    <formula>Client__r.ShippingPostalCode</formula>
    <label>Account Zip</label>
    <type>Text</type>
</CustomField>