force-app/main/default/objects/Job__c/fields/Address_Line_2_Optional__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2_Optional__c</fullName>
    <label>Address Line 2 (Optional)</label>
    <type>TextArea</type>
</CustomField>