force-app/main/default/objects/Job__c/fields/Adverse_Impact_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Impact_Percentage__c</fullName>
    <label>Adverse Impact Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>