force-app/main/default/objects/Job__c/fields/Any_Offers_or_Finalists__c.field-meta.xml
<CustomField>
    <fullName>Any_Offers_or_Finalists__c</fullName>
    <label>Any Offers or Finalists?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>