force-app/main/default/objects/Job__c/fields/Assessment_Id__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Id__c</fullName>
    <label>Assessment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>