force-app/main/default/objects/Job__c/fields/Assigned_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Recruiter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>