force-app/main/default/objects/Job__c/fields/Benefits_Offered__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Offered__c</fullName>
    <label>Benefits Offered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>