force-app/main/default/objects/Job__c/fields/Benifits_Offered__c.field-meta.xml
<CustomField>
    <fullName>Benifits_Offered__c</fullName>
    <label>Benifits Offered</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>