force-app/main/default/objects/Job__c/fields/Bill_Rate_Range__c.field-meta.xml
<CustomField>
    <fullName>Bill_Rate_Range__c</fullName>
    <label>Bill Rate Range</label>
    <length>50</length>
    <type>Text</type>
</CustomField>