force-app/main/default/objects/Job__c/fields/Biz_Dev__c.field-meta.xml
<CustomField>
    <fullName>Biz_Dev__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biz Dev</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs3</relationshipName>
    <type>Lookup</type>
</CustomField>