force-app/main/default/objects/Job__c/fields/Broadcast_Url__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_Url__c</fullName>
    <formula>HYPERLINK(&quot;https://dbsync.avankia.com/hrstaffing/ftp.get?config=&quot;&amp; SUBSTITUTE(TRIM(LOWER($Organization.Name)), &quot; &quot;, &quot;&quot;)&amp;&quot;&amp;jobId=&quot;&amp; Id , &quot;Broadcast URL&quot; )</formula>
    <label>Broadcast Url</label>
    <type>Text</type>
</CustomField>