force-app/main/default/objects/Job__c/fields/Broadcasted_On__c.field-meta.xml
<CustomField>
    <fullName>Broadcasted_On__c</fullName>
    <label>Broadcasted On</label>
    <type>DateTime</type>
</CustomField>