force-app/main/default/objects/Job__c/fields/Call_Em_All_Audio_Id__c.field-meta.xml
<CustomField>
    <fullName>Call_Em_All_Audio_Id__c</fullName>
    <label>Call-Em-All Audio Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>