force-app/main/default/objects/Job__c/fields/Call_Em_All_Scheduler_Completed__c.field-meta.xml
<CustomField>
    <fullName>Call_Em_All_Scheduler_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call-Em-All Scheduler Completed</label>
    <type>Checkbox</type>
</CustomField>