force-app/main/default/objects/Job__c/fields/Call_within_24_48_hrs__c.field-meta.xml
<CustomField>
    <fullName>Call_within_24_48_hrs__c</fullName>
    <label>Call within 24/48 hrs?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>