force-app/main/default/objects/Job__c/fields/Cancellation_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Guarantee__c</fullName>
    <formula>Client__r.Cancellation_Guarantee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Guarantee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>