force-app/main/default/objects/Job__c/fields/Candidate_Search__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Search__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate Search</label>
    <referenceTo>Candidate_Search__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>