force-app/main/default/objects/Job__c/fields/Candidate_Sources_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Sources_Allowed__c</fullName>
    <label>Candidate Sources Allowed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job Board</fullName>
            </value>
            <value>
                <fullName>Internal Referral</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>Walk-in</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>College Recruiting</fullName>
            </value>
            <value>
                <fullName>Career Fair</fullName>
            </value>
            <value>
                <fullName>Direct Apply</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>