force-app/main/default/objects/Job__c/fields/Certificate__c.field-meta.xml
<CustomField>
    <fullName>Certificate__c</fullName>
    <label>Certificate</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>