force-app/main/default/objects/Job__c/fields/Closed_Qualifiers__c.field-meta.xml
<CustomField>
    <fullName>Closed_Qualifiers__c</fullName>
    <label>Closed Qualifiers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client closed</fullName>
            </value>
            <value>
                <fullName>Hired in-house</fullName>
            </value>
            <value>
                <fullName>Loss to competitor</fullName>
            </value>
            <value>
                <fullName>Non-responsive</fullName>
            </value>
            <value>
                <fullName>Unfillable</fullName>
            </value>
            <value>
                <fullName>Wrong Job Description</fullName>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>