force-app/main/default/objects/Job__c/fields/Created_Date_Placement__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Placement__c</fullName>
    <label>Created Date Placement</label>
    <type>DateTime</type>
</CustomField>