force-app/main/default/objects/Job__c/fields/Created_Week__c.field-meta.xml
<CustomField>
    <fullName>Created_Week__c</fullName>
    <formula>CASE(MOD(( DATEVALUE(CreatedDate) ) - DATE(1900, 1, 6), 7),
0, DATEVALUE(CreatedDate) + 0,
1, DATEVALUE(CreatedDate) + 6,
2, DATEVALUE(CreatedDate) + 5,
3, DATEVALUE(CreatedDate) + 4,
4, DATEVALUE(CreatedDate) + 3,
5, DATEVALUE(CreatedDate) + 2,
6, DATEVALUE(CreatedDate)+ 1,
TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Week</label>
    <type>Date</type>
</CustomField>