force-app/main/default/objects/Job__c/fields/Credentialing_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Credentialing_Deadline__c</fullName>
    <label>Credentialing Deadline</label>
    <type>Date</type>
</CustomField>