force-app/main/default/objects/Job__c/fields/Credentials__c.field-meta.xml
<CustomField>
    <fullName>Credentials__c</fullName>
    <formula>Client__r.Credentials__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credentials</label>
    <type>Text</type>
</CustomField>