force-app/main/default/objects/Job__c/fields/CS_Id__c.field-meta.xml
<CustomField>
    <fullName>CS_Id__c</fullName>
    <formula>Candidate_Search__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CS Id</label>
    <type>Text</type>
</CustomField>