force-app/main/default/objects/Job__c/fields/Da_Employer_ID__c.field-meta.xml
<CustomField>
    <fullName>Da_Employer_ID__c</fullName>
    <label>Da_Employer ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>