force-app/main/default/objects/Job__c/fields/Date_Marketed__c.field-meta.xml
<CustomField>
    <fullName>Date_Marketed__c</fullName>
    <label>Date Marketed</label>
    <type>DateTime</type>
</CustomField>