force-app/main/default/objects/Job__c/fields/Deal_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Deal_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Sheet</label>
    <referenceTo>Deal_Sheet__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>