force-app/main/default/objects/Job__c/fields/Deal_Sheet_Hours_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Deal_Sheet_Hours_Per_Week__c</fullName>
    <label>Deal Sheet Hours Per Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>