force-app/main/default/objects/Job__c/fields/Deal_Sheet_Template__c.field-meta.xml
<CustomField>
    <fullName>Deal_Sheet_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Sheet Template</label>
    <referenceTo>Deal_Sheet__c</referenceTo>
    <relationshipLabel>Jobs (Deal Sheet Template)</relationshipLabel>
    <relationshipName>Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>