force-app/main/default/objects/Job__c/fields/DealSheet_Hours_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>DealSheet_Hours_Per_Day__c</fullName>
    <label>DealSheet Hours Per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>