force-app/main/default/objects/Job__c/fields/Default_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Default_Bill_Rate__c</fullName>
    <label>Default Bill Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>