force-app/main/default/objects/Job__c/fields/Default_Call_em_all_Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Call_em_all_Message_Type__c</fullName>
    <label>Default Call em all Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Voice</fullName>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>