force-app/main/default/objects/Job__c/fields/Default_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Default_Pay_Rate__c</fullName>
    <label>Default Pay Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>