force-app/main/default/objects/Job__c/fields/Departmenth__c.field-meta.xml
<CustomField>
    <fullName>Departmenth__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departmenth</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>