force-app/main/default/objects/Job__c/fields/Desired_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Desired_Gross_Margin__c</fullName>
    <label>Desired Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>