force-app/main/default/objects/Job__c/fields/Education_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Education_Requirement__c</fullName>
    <label>Education Requirement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High School Diploma/GED</fullName>
            </value>
            <value>
                <fullName>Associate Degree</fullName>
            </value>
            <value>
                <fullName>Bachelor’s Degree</fullName>
            </value>
            <value>
                <fullName>Master’s Degree</fullName>
            </value>
            <value>
                <fullName>Doctorate/PhD</fullName>
            </value>
            <value>
                <fullName>MD/DO/Professional Degree</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>