force-app/main/default/objects/Job__c/fields/EEO_Compliant__c.field-meta.xml
<CustomField>
    <fullName>EEO_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EEO Compliant</label>
    <type>Checkbox</type>
</CustomField>