force-app/main/default/objects/Job__c/fields/EEO_Job_Category__c.field-meta.xml
<CustomField>
    <fullName>EEO_Job_Category__c</fullName>
    <label>EEO Job Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Professionals</fullName>
            </value>
            <value>
                <fullName>Technicians</fullName>
            </value>
            <value>
                <fullName>Sales Workers</fullName>
            </value>
            <value>
                <fullName>Administrative Support Workers</fullName>
            </value>
            <value>
                <fullName>Craft Workers</fullName>
            </value>
            <value>
                <fullName>Operatives</fullName>
            </value>
            <value>
                <fullName>Laborers and Helpers</fullName>
            </value>
            <value>
                <fullName>Service Workers</fullName>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>