force-app/main/default/objects/Job__c/fields/Expected_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Expected_Bill_Rate__c</fullName>
    <label>Expected Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>