force-app/main/default/objects/Job__c/fields/Experience_Required__c.field-meta.xml
<CustomField>
    <fullName>Experience_Required__c</fullName>
    <label>Experience Required</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>