force-app/main/default/objects/Job__c/fields/Fee_percentage__c.field-meta.xml
<CustomField>
    <fullName>Fee_percentage__c</fullName>
    <label>Fee percentage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>