force-app/main/default/objects/Job__c/fields/Filled_PositionsH__c.field-meta.xml
<CustomField>
    <fullName>Filled_PositionsH__c</fullName>
    <label>Filled PositionsH</label>
    <summaryFilterItems>
        <field>Job_Applicant__c.Application_Status__c</field>
        <operation>equals</operation>
        <value>Placed</value>
    </summaryFilterItems>
    <summaryForeignKey>Job_Applicant__c.Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>