force-app/main/default/objects/Job__c/fields/Guaranteed_Hours_per_Week__c.field-meta.xml
<CustomField>
    <fullName>Guaranteed_Hours_per_Week__c</fullName>
    <label>Guaranteed Hours per Week</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>